Updated gitignore to remove non-source data.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,17 @@ composition.txt
 *.csv
 *.png
 *.prm
+*.jpg
+*.pdf
+*.vtu
+*.vtm
 !ri_base*
 !run_base*
+
 !lab_notebooks_archived/
+
 !tchron/
 !tchron/tests/
-!sample_data/
-!sample_data/vtk_tchron_test/
+
+!sample_data/vtk_tchron_test.vtm
+!sample_data/vtk_tchron_test/*.vtu
