Added prms folder to gitignore exceptions

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ composition.txt
 !lab_notebooks_archived/
 !plotting_scripts/
 !plotting_scripts/figures/
+!prms_rheology/
 
 !tchron/
 !tchron/tests/
