Set up binder environment

--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,11 @@
 name: riftinversion
 channels:
+  - davasey
   - conda-forge
   - defaults
 dependencies:
   - python=3.10
+  - geoscripts
   - pandas
   - jupyter
   - numpy
