Started adding model prms

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .ipynb_checkpoints
 .vscode
 composition.txt
-*/
+*.pyc
 *.sh
 *.csv
 *.png
@@ -25,5 +25,4 @@ composition.txt
 
 !sample_data/vtk_tchron_test.vtm
 !sample_data/vtk_tchron_test/*.vtu
-
-!/model_files/M01_063022_rip_c/*.prm
+!model_files/**
